--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <header>
 	<title>Pig Pal</title>
 	<meta charset="utf-8">
-	<meta name="apple-mobile-web-app-capable" content="yes">    
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-webapp-status-bar-style" content="black">
 	<meta name="viewport" content="width=device-width, user-scalable=no" >
 	<link rel="stylesheet" href="style.css">
@@ -10,6 +10,7 @@
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script src="script.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> <!--for pie chart-->
 </header>
 
 <body>
@@ -18,15 +19,12 @@
   <div data-role="page" style='text-align:center;' id='login'>
     <div data-role="content">
       <img src='pigpallogo.jpg' alt='Pig Pal Logo'>
-      <h1>PigPal</h1>
-      <h2>budget your bacon</h2>
+      <h1 style='font-size:50px;' >PigPal</h1>
+      <h2 style='font-size:16px;'>budget your bacon</h2>
       <form class="form" method="post" action="#" style='text-align:center;'>
         <label>Username</label>
-        <br>
         <input type="text" name="username" id="email">
-        <br>
         <label>Password</label>
-        <br>
         <input type="password" name="password" id="password">
         <br>
         <a href='#forgotpassword'>Forgot Password?</a>
@@ -53,15 +51,10 @@
       <form>
         <label for="emailregister">Email</label>
         <input type="text" name="emailregister" id="emailregister">
-        <br>
-        <br>
         <label for="usernameregister">Username</label>
         <input type="text" name="usernameregister" id="usernameregister" value="">
-        <br>
-        <br>
         <label for="passwordregister">Password</label>
-        <input type="password" id="test1" value="" />
-        <br>
+        <input type="password" id="passwordinput" value=""/>
         <input id="test2" type="checkbox" />Show password
       </form>
       <script>
@@ -150,6 +143,34 @@
         <option value="2016">2016</option>
       </select>
       <!--Insert pie chart. Possible link: http://www.elated.com/articles/snazzy-animated-pie-chart-html5-jquery/ -->
+
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
+    function drawChart() {
+
+      var data = google.visualization.arrayToDataTable([
+        ['Task', 'Hours per Day'],
+        ['Work',     11],
+        ['Eat',      2],
+        ['Commute',  2],
+        ['Watch TV', 2],
+        ['Sleep',    7]
+      ]);
+
+      var options = {
+        title: 'My Daily Activities'
+      };
+
+      var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+      chart.draw(data, options);
+    }
+  </script>
+
+
+  <div id="piechart" style="width: 900px; height: 500px;"></div>
+
       <h2>Categories</h2>
     </div>
   </div>
