--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 		</div>
 
     <div data-role="content">
-      <form id="settingsForm" style="margin-left: 75px;">
+      <form id="settingsForm">
         <input id="email" type="text" placeholder="Email">
         <input id="password" type="text" placeholder="Password">
         <input id="newEmail" type="text" placeholder="New Email">
