--- a/index.html
+++ b/index.html
@@ -113,10 +113,23 @@
 
 	<!--Total Spending Page starts here-->
 	  <div data-role='page' id='totalSpending' style='text-align:center;'>
-	    <div data-role='header'>
-	      <!--Insert hamburger icon here-->
-	      <h1>Total Spending</h1>
-	    </div>
+			<div class="header ui-header ui-bar-a" data-role="header" style="margin-top: 0px; margin-bottom: 5%;" role="banner" id="navBanner">
+					<a class="open left" href="#panel-01"><img src="hamburger.png" style="height: 40px; width:40px;"></a>
+								<span class="title"><h2 style='margin-left:43px;'>Total Spending</h2></span>
+				</div>
+
+				<div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-01">
+					<ul>
+						<li><h3>Charlotte<h3></li>
+						<li class="overviewNav"><a href="#overview" title="overviewNav">Overview</a></li>
+						<li class="pigNameNav"><a href="#pig" title="pigNameNav">Pig Name</a></li>
+						<li class="budgetNav"><a href="#budget" title="budgetNav">Budget</a></li>
+						<li class="totalSpendingNav"><a href="#totalSpending" title="totalSpendingNav">Total Spending</a></li>
+						<li class="savingsGoalNav"><a href="#savingsGoals" title="savingsGoalNav">Savings Goal</a></li>
+						<li class="badgesNav"><a href="#badges" title="badgesNav">Badges</a></li>
+						<li class="settingsNav"><a href="#settings" title="settingsNav">Settings</a></li>
+					</ul>
+				</div>
 	    <div data-role='content'>
 	      <label for="select-choice-month">Month</label>
 	      <select name="select-choice-month" id="select-choice-month">
@@ -177,11 +190,24 @@
 	  <!--/Total Spending page-->
 
 		<!--Savings Goals-->
-			<div data-role='page' id='savingsGoals'>
-				<div data-role='header'>
-					<!--insert Hamburger icon-->
-					<h1>Savings Goals</h1>
-				</div> <!--end of header-->
+			<div data-role='page' id='savingsGoals' style='text-align:center;'>
+				<div class="header ui-header ui-bar-a" data-role="header" style="margin-top: 0px; margin-bottom: 5%;" role="banner" id="navBanner">
+						<a class="open left" href="#panel-01"><img src="hamburger.png" style="height: 40px; width:40px;"></a>
+			            <span class="title"><h2 style='margin-left:43px;'>Savings Goals</h2></span>
+					</div>
+
+				  <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-01">
+						<ul>
+							<li><h3>Charlotte<h3></li>
+							<li class="overviewNav"><a href="#overview" title="overviewNav">Overview</a></li>
+							<li class="pigNameNav"><a href="#pig" title="pigNameNav">Pig Name</a></li>
+							<li class="budgetNav"><a href="#budget" title="budgetNav">Budget</a></li>
+							<li class="totalSpendingNav"><a href="#totalSpending" title="totalSpendingNav">Total Spending</a></li>
+							<li class="savingsGoalNav"><a href="#savingsGoals" title="savingsGoalNav">Savings Goal</a></li>
+							<li class="badgesNav"><a href="#badges" title="badgesNav">Badges</a></li>
+							<li class="settingsNav"><a href="#settings" title="settingsNav">Settings</a></li>
+						</ul>
+					</div>
 				<div data-role='content'>
 					<div id="progressbar"></div>
 					<script>
@@ -197,10 +223,23 @@
 
 		<!--Badges Page begins here-->
 	    <div data-role='page' id='badges' style='text-align:center;'>
-	      <div data-role='header'>
-	        <!--insert Hamburger icon-->
-	        <h1>Badges</h1>
-	      </div>
+				<div class="header ui-header ui-bar-a" data-role="header" style="margin-top: 0px; margin-bottom: 5%;" role="banner" id="navBanner">
+						<a class="open left" href="#panel-01"><img src="hamburger.png" style="height: 40px; width:40px;"></a>
+									<span class="title"><h2>Badges</h2></span>
+					</div>
+
+					<div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-01">
+						<ul>
+							<li><h3>Charlotte<h3></li>
+							<li class="overviewNav"><a href="#overview" title="overviewNav">Overview</a></li>
+							<li class="pigNameNav"><a href="#pig" title="pigNameNav">Pig Name</a></li>
+							<li class="budgetNav"><a href="#budget" title="budgetNav">Budget</a></li>
+							<li class="totalSpendingNav"><a href="#totalSpending" title="totalSpendingNav">Total Spending</a></li>
+							<li class="savingsGoalNav"><a href="#savingsGoals" title="savingsGoalNav">Savings Goal</a></li>
+							<li class="badgesNav"><a href="#badges" title="badgesNav">Badges</a></li>
+							<li class="settingsNav"><a href="#settings" title="settingsNav">Settings</a></li>
+						</ul>
+					</div>
 	      <div data-role='content'>
 	        <!--frugal fun-->
 	        <a href="#frugalfun" data-rel="popup"><img src='badges/star.png' width='90px'></a>
@@ -474,12 +513,12 @@
 
 <!--Settings-->
   <div data-role="page" id="settings" style='text-align:center;'>
-  
+
   <div class="header ui-header ui-bar-a" data-role="header" style="margin-top: 0px; margin-bottom: 5%;" role="banner" id="navBanner">
 			<a class="open left" href="#panel-01"><img src="hamburger.png" style="height: 40px; width:40px;"></a>
             <span class="title"><h2>Settings</h2></span>
 		</div>
-	  
+
 	  <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-01">
 			<ul>
 				<li><h3>Charlotte<h3></li>
